# FastAPI_blog_microservices

./: .gitignore  Makefile  README.md  setup.cfg
api_gateway/: .env  .env.template  Makefile  docker-compose-local.yml  docker-compose-main.yml
api_gateway/app/: Dockerfile  main.py  network.py  permissions.py  pyproject.toml
api_gateway/app/api/: depends.py  urls.py
api_gateway/app/api/routes/: auth.py  blog.py  user.py
api_gateway/app/api/schemas/: blog.py  user.py
api_gateway/app/core/: config.py  security.py
blog/: Makefile  docker-compose-dev.yml  docker-compose-main.yml  docker-compose-prod.yml  docker-compose.yml
blog/app/: .env  .env.template  Dockerfile  config.py  db.py  depends.py  entrypoint.sh  exceptions.py  main.py  pyproject.toml  repositories.py  routes.py  schemas.py
blog/app/api/: depends.py  schemas.py
blog/app/api/routes/: blog.py
users/: .env  .env.template  Makefile  docker-compose-dev.yml  docker-compose-main.yml  docker-compose-prod.yml  docker-compose.yml
users/app/: Dockerfile  alembic.ini  entrypoint.sh  exceptions.py  main.py  pyproject.toml  utils.py
users/app/api/: depends.py  schemas.py
users/app/api/routes/: auth.py  user.py
users/app/core/: config.py  security.py
users/app/db/: models.py  repositories.py  session.py
users/app/migrations/: env.py
users/app/migrations/versions/: 109025605d20_.py  618ebee3f895_init.py  868ba78933c4_init_users_db.py
