[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kpimenov <kirill.pimenoff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
motor = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
