[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kpimenov <kirill.pimenoff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
motor = "^3.1.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.5"}
uuid6 = "^2022.10.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
