[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["kpimenov <kirill.pimenoff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
uuid6 = "^2022.10.25"
pydantic = {extras = ["email"], version = "^1.10.9"}
alembic = "^1.10.2"
greenlet = "^2.0.2"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
